--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to The Best Gaming Store in Egypt</h1>
+        <div class="logo">
+            <h1>🎮 GameStore Egypt</h1>
+        </div>
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
@@ -21,16 +23,81 @@
     </header>
 
     <main>
-        <section id="home">
+        <section id="hero">
+            <h2>Welcome to Egypt's Premier Gaming Destination</h2>
+            <p>Discover the latest games, consoles, and accessories!</p>
+            <button class="cta-button">Shop Now</button>
+        </section>
+
+        <section id="featured-products">
             <h2>Featured Products</h2>
-            <div class="products">
-                <!-- Add your product items here -->
+            <div class="product-grid">
+                <div class="product-card">
+                    <img src="https://placehold.co/300x200" alt="PS5 Console">
+                    <h3>PlayStation 5</h3>
+                    <p>Experience next-gen gaming</p>
+                    <button>Learn More</button>
+                </div>
+                <div class="product-card">
+                    <img src="https://placehold.co/300x200" alt="Xbox Series X">
+                    <h3>Xbox Series X</h3>
+                    <p>Power your dreams</p>
+                    <button>Learn More</button>
+                </div>
+                <div class="product-card">
+                    <img src="https://placehold.co/300x200" alt="Nintendo Switch">
+                    <h3>Nintendo Switch</h3>
+                    <p>Play anywhere, anytime</p>
+                    <button>Learn More</button>
+                </div>
+            </div>
+        </section>
+
+        <section id="categories">
+            <h2>Browse Categories</h2>
+            <div class="category-grid">
+                <div class="category-card">
+                    <h3>Latest Games</h3>
+                    <p>Explore our collection of new releases</p>
+                </div>
+                <div class="category-card">
+                    <h3>Gaming Consoles</h3>
+                    <p>Find your perfect gaming system</p>
+                </div>
+                <div class="category-card">
+                    <h3>Accessories</h3>
+                    <p>Enhance your gaming experience</p>
+                </div>
+                <div class="category-card">
+                    <h3>Pre-owned Games</h3>
+                    <p>Great games at amazing prices</p>
+                </div>
             </div>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2025 The Best Gaming Store in Egypt. All rights reserved.</p>
+        <div class="footer-content">
+            <div class="footer-section">
+                <h3>Contact Us</h3>
+                <p>Email: info@gamestoreegypt.com</p>
+                <p>Phone: +20 123 456 789</p>
+            </div>
+            <div class="footer-section">
+                <h3>Follow Us</h3>
+                <p>Facebook</p>
+                <p>Instagram</p>
+                <p>Twitter</p>
+            </div>
+            <div class="footer-section">
+                <h3>Store Hours</h3>
+                <p>Mon-Fri: 10am - 10pm</p>
+                <p>Sat-Sun: 12pm - 8pm</p>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2025 The Best Gaming Store in Egypt. All rights reserved.</p>
+        </div>
     </footer>
 </body>
 </html>
